business logic - get by id
