# src/routes/routes.ts
@@ -157,6 +157,32 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/bookings/:id',
+            authenticateMiddleware([{"token":[]}]),
+            ...(fetchMiddlewares<RequestHandler>(BookingsController)),
+            ...(fetchMiddlewares<RequestHandler>(BookingsController.prototype.get)),
+
+            function BookingsController_get(request: any, response: any, next: any) {
+            const args = {
+                    undefined: {"in":"request","required":true,"dataType":"object"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new BookingsController();
+
+
+              const promise = controller.get.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.post('/bookings',
             authenticateMiddleware([{"token":[]}]),
             ...(fetchMiddlewares<RequestHandler>(BookingsController)),
